# streamseeker

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  config.json  next_steps.md  pyproject.toml
docs/: concept-download-queue-view.md  index.md
docu-intern/: README.md  architecture.md  conventions.md  data-location.md  data-model.md  flows.md  platform-support.md  streams.md  versioning.md
docu-intern/decisions/: 0001-file-based-library.md  0002-minimal-metadata.md  0003-fastapi-daemon.md  0004-daemon-optional.md  0005-svg-only-icons.md  0006-independent-versioning.md  0007-tmdb-primary-source.md  0008-anilist-for-anime.md  0009-local-image-cache.md  0010-user-home-data-dir.md  0011-user-level-autostart.md  0012-unpacked-extension-install.md  0013-windows-best-effort.md  0014-desktop-icon-opens-dashboard.md  README.md
extension/: CHANGELOG.md  README.md  background.js  manifest.json
extension/content_scripts/: aniworldto.js  common.js  megakinotax.js  overlay.css  sto.js
extension/lib/: api.js  i18n.js
extension/locales/: de.js  en.js
extension/popup/: popup.css  popup.html  popup.js
scripts/: render_icons.py
src/streamseeker/: __main__.py  cli_api.py  constants.py  i18n.py  paths.py
src/streamseeker/api/: handler.py
src/streamseeker/api/core/: daemon_client.py  library_backend.py  logger.py  request_handler.py
src/streamseeker/api/core/classes/: base_class.py
src/streamseeker/api/core/downloader/: ffmpeg.py  helper.py  manager.py  processor.py  standard.py
src/streamseeker/api/core/metadata/: __init__.py  anilist.py  base.py  jikan.py  registry.py  resolver.py  tmdb.py  tvmaze.py
src/streamseeker/api/providers/: provider_factory.py
src/streamseeker/api/providers/filemoon/: filemoon.py
src/streamseeker/api/providers/vidmoly/: vidmoly.py
src/streamseeker/api/providers/voe/: voe.py
src/streamseeker/api/streams/: stream_base.py
src/streamseeker/api/streams/aniworldto/: aniworldto.py
src/streamseeker/api/streams/aniworldto/commands/: download.py
src/streamseeker/api/streams/megakinotax/: megakinotax.py
src/streamseeker/api/streams/megakinotax/commands/: download.py
src/streamseeker/api/streams/sto/: sto.py
src/streamseeker/api/streams/sto/commands/: download.py
src/streamseeker/console/: application.py
src/streamseeker/console/commands/: _library_shared.py  about.py  install_desktop_icon.py  install_extension.py  migrate.py  retry.py  run.py  uninstall.py  uninstall_desktop_icon.py  uninstall_extension.py
src/streamseeker/console/commands/daemon/: install_autostart.py  logs.py  restart.py  start.py  status.py  stop.py  uninstall_autostart.py
src/streamseeker/console/commands/favorite/: add.py  list.py  promote.py  refresh.py  remove.py  search.py
src/streamseeker/daemon/: __init__.py  autostart.py  lifecycle.py  server.py  watchdog.py
src/streamseeker/distribution/: __init__.py  desktop.py  extension_sync.py  sources.py
src/streamseeker/locales/: __init__.py  de.json  en.json
src/streamseeker/utils/: _compat.py
tests/: conftest.py  test_build_file_path.py  test_daemon_api.py  test_daemon_autostart.py  test_daemon_client.py  test_daemon_lifecycle.py  test_daemon_restart.py  test_daemon_watchdog.py  test_distribution.py  test_download_helper.py  test_download_manager.py  test_extension_sync.py  test_library_autopopulate.py  test_library_backend.py  test_library_commands.py  test_library_refresh_integration.py  test_library_rescan.py  test_library_store.py  test_library_updates.py  test_metadata_anilist.py  test_metadata_resolver.py  test_metadata_tmdb.py  test_migrate_command.py  test_paths.py  test_queue_processor.py
