[project]
name = "streamseeker"
version = "0.2.0"
description = "Track your favourite series, animes and movies across streaming sites and maintain a personal collection."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Dennis Fiedler", email = "denfie83@googlemail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.12.2,<5",
    "invoke>=2.2.0,<3",
    # 2.33.0 fixes temp file reuse; 2.32.4 fixes .netrc leak (GHSA-9hjg-9r4m-mvj7, GHSA-9wx4-h78v-vm56)
    "requests>=2.33.0,<3",
    "selenium>=4.15.2,<5",
    "tqdm==4.66.3",
    "tomli>=2.0.2,<3",
    "cleo>=2.1.0,<3",
    "numpy>=2.1.2,<3",
    "packaging>=24.1",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    # 12.1.1 fixes PSD OOB-write, 12.2.0 fixes FITS GZIP bomb
    "Pillow>=12.2.0,<13",
    # Pull CVE-free transitive deps explicitly so dependabot stops flagging
    # them. urllib3 2.6.3 patches redirect decompression bomb (CVE-2025-50182);
    # h11 0.16.0 fixes malformed Chunked-Encoding parsing (CVE-2025-43859).
    "urllib3>=2.6.3,<3",
    "h11>=0.16.0,<1",
]

[project.optional-dependencies]
dev = [
    # 9.0.3 fixes tmpdir race (CVE-2024-...; dependabot alert)
    "pytest>=9.0.3,<10",
    "httpx>=0.27.0,<1",
    "responses>=0.25.0,<1",
]

[project.urls]
Homepage = "https://github.com/Denfie/streamseeker"
Repository = "https://github.com/Denfie/streamseeker"
Issues = "https://github.com/Denfie/streamseeker/issues"

[project.scripts]
streamseeker = "streamseeker.console.application:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamseeker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
